sange navber button

--- a/index.html
+++ b/index.html
@@ -8,11 +8,9 @@
     <link rel="stylesheet" href="./style.css">
     <script src="https://kit.fontawesome.com/2d81a32ce8.js" crossorigin="anonymous"></script>
 </head>
-
 <body>
-    
     <nav class="navication">
-        <i class="fa-solid fa-bars"></i>
+       <button><i class="fa-solid fa-bars"></i></button>
         <a href="" class="nav-first-img"><img src="./image/d-logo.png" alt=""></a>
         <div>
             <ul class="nav-ber">
@@ -28,7 +26,6 @@
             </ul>
         </div>
     </nav>
-
     <header class="travel">
         <div>
             <h1>TRAVEL TIME</h1>
@@ -44,7 +41,6 @@
             </div>
         </div>
     </header>
-
     <div class="tours">
         <h1>OUR TOURS</h1>
         <div class="tours-img">
@@ -54,7 +50,6 @@
             <img src="./image/india.jpeg" alt="">
         </div>
     </div>
-
     <span class="discover">
         <div class="discover-div">
             <h1>DISCOVER THE WORLD IN A NEW WAYS</h1>
@@ -69,7 +64,6 @@
             </ul>
         </div>
     </span>
-
     <section class="our-galary">
         <h1>OUR GALLERY</h1>
         <section class="galary-area">
@@ -86,7 +80,6 @@
             </div>
         </section>
     </section>
-
     <section class="contract">
         <h1>CONTRACT US</h1>
         <div class="contract-div">
@@ -116,7 +109,6 @@
 
         </div>
     </section>
-
     <section class="puaters">
         <div class="puaters-div">
             <div class="lorem">
